fix: default 1 like if we have liked it and none are visible

--- a/mods/redsquare/web/css/redsquare-base.css
+++ b/mods/redsquare/web/css/redsquare-base.css
@@ -168,8 +168,10 @@
   animation: flash linear 3s infinite;
 }
 .saito-main {
-  padding-top: 0px;
+  padding-top: 1.5rem;
 }
+
+
 @keyframes flash {
    0%, 50%, 100% {
       opacity: 1;
@@ -178,3 +180,11 @@
       opacity: 0;
    }
 }
+
+
+@media screen and (max-width: 800px) {
+  .saito-main {
+    padding-top: 0px;
+  }
+}
+
